--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
     <div class="section section-team text-center ceo">
       <p class="description">I hope that EXTrader would be a very vital application for all interested users.</p>
-      <p class="category text-primary">Mantissa Onyeoma, CEO</p>
+      <p class="category text-primary">Muonagor Chukwuemeka, CEO.</p>
     </div>
   	<footer class="footer" data-background-color="black">
   		<div class="container">
       		<div class="col-xs-12">
         	<center>
         	<!--<p><a href="https://www.yourtechshow.com"> <img src="./android-icon-48x48.png" alt=""></a> </p> -->
-         	<p>© All Rights Reserved. Developed by <a href="index.html" title="Get to know Mantissa Onyeoma">Mantissa Onyeoma.</a>
+         	<p>© All Rights Reserved. Developed by <a href="index.html" title="Get to know Muonagor Chukwuemeka">Muonagor Chukwuemeka.</a>
       		</p>
       		</center>
       		</div>
