--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@ The above copyright notice and this permission notice shall be included in all c
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="index.html" target="_blank" data-original-title="Follow us on Twitter">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/" target="_blank" data-original-title="Follow us on Twitter">
                             <i class="fa fa-twitter"></i>
                             <p class="d-lg-none d-xl-none">Twitter</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="index.html" target="_blank" data-original-title="Like us on Facebook">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://facebook.com/" target="_blank" data-original-title="Like us on Facebook">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none d-xl-none">Facebook</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="index.html" target="_blank" data-original-title="Follow us on Instagram">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://instagram.com/" target="_blank" data-original-title="Follow us on Instagram">
                             <i class="fa fa-instagram"></i>
                             <p class="d-lg-none d-xl-none">Instagram</p>
                         </a>
@@ -77,7 +77,7 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="container">
           <div class="content-center brand">
               <h1 class="h1-seo large">EXTrader</h1>
-              <h3 class="h3-seo">The Best Trading System Ever</h3>
+              <h3 class="h3-seo">The Best Trading System</h3>
           </div>
         </div>
     </div> 
@@ -160,7 +160,7 @@ The above copyright notice and this permission notice shall be included in all c
       		<div class="col-xs-12">
         	<center>
         	<!--<p><a href="https://www.yourtechshow.com"> <img src="./android-icon-48x48.png" alt=""></a> </p> -->
-         	<p>© All Rights Reserved. Developed by <a href="index.html" title="Get to know Muonagor Chukwuemeka">Muonagor Chukwuemeka.</a>
+         	<p>© All Rights Reserved. Developed by <a href="http://cmuonagor.com/" title="Get to know Muonagor Chukwuemeka">Muonagor Chukwuemeka.</a>
       		</p>
       		</center>
       		</div>
